# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
description       = "Integration tests for direct connectivity (ALTS + DirectPath)."
name              = "integration-tests-direct-connectivity"
publish           = false
version           = "0.0.0"
edition.workspace = true
license.workspace = true

[features]
# Disabled by default because these tests MUST run on a GCE VM.
run-integration-tests = []

[dependencies]
anyhow.workspace                       = true
google-cloud-gax.workspace             = true
google-cloud-gax-internal              = { path = "../../src/gax-internal", package = "google-cloud-gax-internal", features = ["_internal-direct-connectivity"] }
google-cloud-storage                   = { workspace = true, features = ["default"] }
google-cloud-test-utils                = { workspace = true }
tokio                                  = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace                      = true
tracing-subscriber                     = { workspace = true, features = ["fmt"] }

[lints]
workspace = true
